examples/test/testpolicy18297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18297
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key35: value49
      key37: value48
      key22: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value19
          key24: value30
          key8: value8
      podSelector:
        matchLabels:
          key49: value24
